assets/css/index.css
/* ... */
form .form__group > textarea + label {
  top: 16px;
  -webkit-transform: translateY(0);
          transform: translateY(0)
}

form .form__group > input[type],
form .form__group > textarea {
  width: 100%;
  border: 2px solid white;
  border-radius: 3px;
  background-color: rgba(0,0,0,0);
  padding: 16px;
  color: white;
  font-size: 12px;
}

form .form__cc_group > span {
  display: inline-block;
  color: inherit;
  font-size: 48px;
}

form .form__cc_group > span > i {
  line-height: 0.75;
}

form .form__cc_group .cc.active { background-color: white; }
form .form__cc_group .cc__visa.active { color: #1a1f71; }
form .form__cc_group .cc__mastercard.active { color: #cc0000; }
form .form__cc_group .cc__amex.active { color: #002663; }
form .form__cc_group .cc__discover.active { color: #E55C20; }

form input[type]:focus,
form input[type]:active,
form textarea:focus,
form textarea:active {
  outline: none;
}

form input:not([type="radio"]):focus + label,
form input:not([type="radio"]):active + label,
form input:not([type="radio"]):valid + label {
  -webkit-transform: translateY(-170%);
          transform: translateY(-170%);
}

form textarea:focus + label,
form textarea:active + label,
form textarea:valid + label {
  -webkit-transform: translateY(-24px);
  transform: translateY(-24px);
}

form input[type="radio"] {
  max-height: 0;
  padding: 0;
  overflow: hidden;
  -webkit-appearance: none;
     -moz-appearance: none;
          appearance: none;
}

form input[type="radio"] + label {
  font-size: 48px;
  font-weight: bold;
  color: inherit;
  cursor: pointer;
  padding: 0.85rem;
  border-radius: 3px;
  -webkit-transition: background-color linear 200ms;
  transition: background-color linear 200ms;
}

form input[type="radio"] + label:hover,
form input[type="radio"]:active + label,
form input[type="radio"]:focus + label,
form input[type="radio"]:checked + label {
  background-color: #609570;
}

/* 
  7.  Calendar
  ====================
*/

.calendar {
  width: 350px;
  max-width: 100%;
}

.calendar .calendar__month,
.calendar .calendar__days_of_week {
  color: inherit;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-flow: row wrap;
          flex-flow: row wrap;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center
}

.calendar .calendar__month > span {
  cursor: pointer;
}

.calendar .calendar__month .calendar__current_month {
  margin: 0;
  font-weight: 300;
  letter-spacing: 4.5px;
}

.calendar .calendar__days_of_week {
  font-size: 12px;
  font-weight: lighter;
}

.calendar .calendar__days {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-flow: row wrap;
          flex-flow: row wrap;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: start;
      -ms-flex-pack: start;
          justify-content: flex-start;
}

.calendar .calendar__days_of_week > p,
.calendar .calendar__days > span {
  text-align: center;
  -webkit-box-flex: 0;
      -ms-flex: 0 1 14.2857143%;
          flex: 0 1 14.2857143%;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

.calendar .calendar__days>span {
  font-size: 20px;
}

.calendar .calendar__days > span {
  height: 50px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}

.calendar .calendar__days > span.current {
  border: 2px solid white;
  border-radius: 50%;
  max-width: 48px;
}

/* 
  Home
  =====================
*/

.body__home > nav {
  -webkit-transition: -webkit-transform 200ms ease-in;
  transition: -webkit-transform 200ms ease-in;
  transition: transform 200ms ease-in;
  transition: transform 200ms ease-in, -webkit-transform 200ms ease-in;
}

.body__home.show_nav > nav {
  -webkit-transform: translateY(0);
          transform: translateY(0);
}

.body__home > nav .nav__list {
  max-width: 768px;
  margin: 0 auto;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-flow: row nowrap;
          flex-flow: row nowrap;
  -ms-flex-pack: distribute;
      justify-content: space-around;
}

.body__home > nav .nav__list[data-state="open"] {
  left: 0;
  right: 0;
}

.body__home > nav .nav__list a.home__only_hamburger {
  display: none;
}

.body__home > nav .nav__list[data-state="open"] a.home__only_hamburger {
  display: block;
}

.body__home > nav .nav__list[data-state="open"] a.home__only_main {
  display: none;
}

.body__home > nav .nav__toggle {
  top: 10px;
  height: 25px;
  padding: 2px 5px;
  display: block;
  background: white;
  border-radius: 50%;
  -webkit-box-shadow: 0 3px 6px 1px rgba(0, 0, 0, 0.5);
          box-shadow: 0 3px 6px 1px rgba(0, 0, 0, 0.5);
}

.body__home > nav .nav__toggle > span {
  margin: 10px auto;
  height: 2px;
}

.body__home > nav .nav__toggle > span::before,
.body__home > nav .nav__toggle > span::after {
  height: 2px;
}

.body__home > nav .nav__toggle > span::before {
  top: -4px;
}

.body__home > nav .nav__toggle > span::after {
  top: 4px;
}

.body__home > main {
  width: 100%;
  position: relative;
  background-color: #2f2d2d;
}

.body__home > main .logo {
  display: block;
  text-align: center;
  margin: auto;
  width: 100%;
  padding: 93px 2em;
}

.body__home > main .logo > img {
  width: 169px;
  max-width: 100%;
}

.body__home > main .home__cta {
  display: block;
  padding: 2em 2em 4em;
  text-align: center;
}

.body__home > main .home__cta > a {
  display: none;
}

.body__home > main .home__cta > a > i > img {
  width: 34px;
}
/* ... */

